# stereo-matching

./: .dockerignore  .gitignore  .pylintrc  CMakeLists.txt  Dockerfile  Justfile  README.md  docker.justfile  docker.mk  environment.yml  requirements-dev.txt  requirements.txt  setup.py  tasks.mk  testing.justfile  testing.mk
.github/workflows/: build-and-test.yml  build-and-testy.yml  pages.yml
cmake/: get_torch_cxx11_abi.py  get_torch_dir.py
doc/: Makefile
doc/source/: .gitignore  conf.py  index.rst  modules.rst
include/stereomatch/: accessor.hpp  aggregation.hpp  check.hpp  cost.hpp  cuda_texture.hpp  cuda_utils.hpp  disparity_reduce.hpp  kernel.hpp  math.hpp  numeric.hpp  semiglobal.hpp
src/: CMakeLists.txt  Makefile  _cstereomatch.cpp  aggregation.cpp  birchfield_cost.cu  bordered_buffer.hpp  cost.cpp  cuda_texture.cpp  cuda_texture.cu  cuda_utils.cpp  disparity_reduce.cpp  dynamic_programming.cu  semiglobal.cpp  semiglobal.cu  semiglobal.hpp  semiglobal_gpu.cu  ssd.cu  type_dispatch.hpp  winners_take_all.cu
stereomatch/: __init__.py  _common.py  aggregation.py  calibration.py  capture.py  cli_common.py  cli_image.py  cli_video.py  cost.py  cuda_texture.py  data.py  disparity_reduce.py  numeric.py  pipeline.py  single_image_app.py
tests/: .gitignore  conftest.py  test_aggregation.py  test_cost.py  test_data.py  test_dynamic_programming.py  test_numeric.py  test_pipeline.py  test_semiglobalmatch.py  test_texture.py  test_winners_take_all.py  viz.py
workflows/evaluation/: .gitignore  Justfile  workflow.py
